Error message is repeated for large value at G1ConcRefinementThreads

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • gc
    • b84

        We can see below message is repeatedly printed out from ctor of hotspot/src/share/vm/gc/g1/concurrentG1Refine.cpp.

        Error occurred during initialization of VM
        Could not create ConcurrentG1RefineThread
        Error occurred during initialization of VM
        Could not create ConcurrentG1RefineThread
        Error occurred during initialization of VM
        Could not create ConcurrentG1RefineThread

        Command to reproduce:
        java -XX:G1ConcRefinementThreads=2147483646 -version

              Assignee:
              Sangheon Kim (Inactive)
              Reporter:
              Sangheon Kim (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: