8135025: Error message is repeated for large value at G1ConcRefinementThreads

Changed error handling when G1ConcRefinementThreads creation failed

Reviewed-by: jwilhelm, kbarrett, tschatzl